--- a/style.css
+++ b/style.css
@@ -3,12 +3,101 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Red Rose", cursive;
+  color: #ffc400;
+  /* height: 100%; */
+}
+
+body {
+  background-image: url(./assets/pexels-maxyne-barcel-10402282\ 1.png);
+  background-repeat: no-repeat;
+  /* background-position: 100%; */
+  background-size: cover;
 }
 
 /* ------------------------------ */
 /* ---------- NAVBAR ------------ */
 /* ------------------------------ */
 
+.container {
+  background-color: #0007625e;
+  /* opacity: 0.65; */
+  width: 100%;
+  height: 100vh;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 6rem;
+  padding-bottom: 1rem;
+}
+
+.list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+}
+
+.list > .list-item {
+  padding: 0 2rem;
+  font-weight: 600;
+  font-size: 1.313rem;
+}
+
+.list > .list-item:hover {
+  cursor: pointer;
+}
+
+.button-small {
+  background-color: #f55656;
+  color: white;
+  padding: 1rem 3rem;
+  font-size: 1.125rem;
+  font-weight: 600;
+  border: none;
+}
+
+.button-small:hover {
+  cursor: pointer;
+}
+
 /* ------------------------------ */
 /* ---------- HERO ------------ */
 /* ------------------------------ */
+
+.hero {
+  padding-top: 1rem;
+  text-align: center;
+}
+
+.hero-heading {
+  font-family: "Dela Gothic One", cursive;
+  font-size: 4rem;
+  margin: 0 10rem;
+}
+
+.button-large {
+  background-color: #f55656;
+  color: white;
+  padding: 1.5rem 4rem;
+  margin-top: 3rem;
+  font-size: 1.75rem;
+  font-weight: 600;
+  border: none;
+}
+
+.button-large:hover {
+  cursor: pointer;
+}
+
+.bottom {
+  position: absolute;
+  right: 5%;
+  bottom: 5%;
+}
+
+.bottom img {
+  width: 75%;
+}
